# agentic-mcp-crawler

./: .env.example  .gitignore  AGENTIC_SETUP.md  API_DOCS.md  CLEANUP_SUMMARY.md  DEAL_HAWK_INTEGRATION.md  DEPLOYMENT_SUMMARY.md  DISCORD_INTEGRATION.md  Dockerfile  FRESH_SUPABASE_SETUP.md  HELP.md  RAILWAY_DEPLOYMENT.md  README.md  SETUP_GUIDE.md  WELCOME.md  create_fresh_supabase.sh  deal_hawk_mcp_client.py  discord_agentic_bot.py  docker-compose.yml  health_check.py  pyproject.toml  railway.json  requirements.txt  test-depop-server.py  test_deal_hawk_integration.py
.github/workflows/: deploy.yml
sql/: agentic_crawler_schema.sql
src/: agentic_crawler.py  enhanced_http_server.py  enhanced_mcp_server.py  http_api_server.py  marketplace_config.py  multi_marketplace_server.py  unified_server.py
